--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: AmesA
-Title: What the Package Does (One Line, Title Case)
+Title: Estimate mesophyll area to leaf area ratio
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Alston", "Lippert", , "a.lippert@ufl.edu", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: Functions for averaging anatomical measurements as well as estimating mesophyll airspace fraction, surface area and volume of spongey, palisade I, and palisade H mesophyll cells, and mesophyll area to leaf area ratio. Methodology from https://prometheusprotocols.net/estimating-the-mesophyll-surface-area-per-leaf-area-from-leaf-cell-and-tissue-dimensions-measured-from-transverse-cross-sections/.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Suggests: 
+    tidyverse
