--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,11 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
+    testthat (>= 3.0.0),
     tidyverse
 URL: https://github.com/a-lippert/AmesA
 BugReports: https://github.com/a-lippert/AmesA/issues
+Config/testthat/edition: 3
+Depends: 
+    R (>= 2.10)
+LazyData: true
